{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 148,
  "lineage": "9082fe6c-04db-0c9b-f499-560ab8bcd122",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "MyTest_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:349108081578:targetgroup/MyTestInstance-target-group/90cb09c4a04d72f3",
            "arn_suffix": "targetgroup/MyTestInstance-target-group/90cb09c4a04d72f3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:349108081578:targetgroup/MyTestInstance-target-group/90cb09c4a04d72f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "MyTestInstance-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0be6dc4ef116a2c1f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MyTest_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0195c67b8c18533b6",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:349108081578:instance/i-0b11681d0e477b8a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b11681d0e477b8a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mytest_instance_kp.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa904563607ca857",
            "private_dns": "ip-172-31-82-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.82.189",
            "public_dns": "ec2-3-86-201-1.compute-1.amazonaws.com",
            "public_ip": "3.86.201.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce8b3b8580f59d01",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Mytest_instance-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0195c67b8c18533b6",
            "tags": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a14bc5adf2efc1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest_instance_kp",
            "aws_security_group.mytest_instance-sg",
            "data.aws_subnets.stack_sub_id_list"
          ]
        },
        {
          "index_key": "subnet-06499a536ff6ac965",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:349108081578:instance/i-098332459ef6fa295",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098332459ef6fa295",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mytest_instance_kp.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb396498bc62f864",
            "private_dns": "ip-172-31-22-94.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.94",
            "public_dns": "ec2-34-229-200-44.compute-1.amazonaws.com",
            "public_ip": "34.229.200.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a267e7d868b121d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Mytest_instance-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06499a536ff6ac965",
            "tags": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a14bc5adf2efc1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest_instance_kp",
            "aws_security_group.mytest_instance-sg",
            "data.aws_subnets.stack_sub_id_list"
          ]
        },
        {
          "index_key": "subnet-072df284ee26e72d2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:349108081578:instance/i-0edf1d5ccc35c2490",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edf1d5ccc35c2490",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mytest_instance_kp.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0076724dd9fd81a4d",
            "private_dns": "ip-172-31-51-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.51.5",
            "public_dns": "ec2-52-87-216-193.compute-1.amazonaws.com",
            "public_ip": "52.87.216.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ba2499ee7c7a46a4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Mytest_instance-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072df284ee26e72d2",
            "tags": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a14bc5adf2efc1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest_instance_kp",
            "aws_security_group.mytest_instance-sg",
            "data.aws_subnets.stack_sub_id_list"
          ]
        },
        {
          "index_key": "subnet-09badc08c95893ac9",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:349108081578:instance/i-079683836ec8b76d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079683836ec8b76d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mytest_instance_kp.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e3a80dee2b16c93",
            "private_dns": "ip-172-31-69-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.69.51",
            "public_dns": "ec2-3-238-121-220.compute-1.amazonaws.com",
            "public_ip": "3.238.121.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075bf1d59869a5899",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Mytest_instance-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09badc08c95893ac9",
            "tags": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a14bc5adf2efc1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest_instance_kp",
            "aws_security_group.mytest_instance-sg",
            "data.aws_subnets.stack_sub_id_list"
          ]
        },
        {
          "index_key": "subnet-0a93b7ff2ffdab4e3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:349108081578:instance/i-027c5b5aa5cf32fb2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027c5b5aa5cf32fb2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mytest_instance_kp.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfd392c2db932b36",
            "private_dns": "ip-172-31-38-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.15",
            "public_dns": "ec2-3-91-103-30.compute-1.amazonaws.com",
            "public_ip": "3.91.103.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02a694a55c1233670",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Mytest_instance-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a93b7ff2ffdab4e3",
            "tags": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a14bc5adf2efc1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest_instance_kp",
            "aws_security_group.mytest_instance-sg",
            "data.aws_subnets.stack_sub_id_list"
          ]
        },
        {
          "index_key": "subnet-0fd12f64ef4477115",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08f3d892de259504d",
            "arn": "arn:aws:ec2:us-east-1:349108081578:instance/i-0513f99627f5b26a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0513f99627f5b26a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mytest_instance_kp.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0907ec8628db328c3",
            "private_dns": "ip-172-31-14-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.218",
            "public_dns": "ec2-18-208-201-69.compute-1.amazonaws.com",
            "public_ip": "18.208.201.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e16170b6ca0eb7d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Mytest_instance-WebDMZ"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd12f64ef4477115",
            "tags": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "Yes",
              "Name": "Mytest_Instance$_{each.key}",
              "OwnerEmail": "shinaodukoya@usa.com",
              "Schedule": "A",
              "StactTeam": "stackcloud9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a14bc5adf2efc1a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest_instance_kp",
            "aws_security_group.mytest_instance-sg",
            "data.aws_subnets.stack_sub_id_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mytest_instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:349108081578:security-group/sg-03a14bc5adf2efc1a",
            "description": "Mytest_instance Security Group",
            "egress": [],
            "id": "sg-03a14bc5adf2efc1a",
            "ingress": [],
            "name": "Mytest_instance-WebDMZ",
            "name_prefix": "",
            "owner_id": "349108081578",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be6dc4ef116a2c1f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1163476025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03a14bc5adf2efc1a",
            "security_group_rule_id": "sgr-076fa957b7ae2eb58",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mytest_instance-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3037744461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03a14bc5adf2efc1a",
            "security_group_rule_id": "sgr-096e66658c8557502",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mytest_instance-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-60428536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03a14bc5adf2efc1a",
            "security_group_rule_id": "sgr-028fa4d8baa413386",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mytest_instance-sg"
          ]
        }
      ]
    }
  ]
}